--- a/s6.md
+++ b/s6.md
@@ -160,3 +160,207 @@ Inside the `/etc/crontab` file, there are a few lines dedicated to specifying th
 By default, the result of running the `cron` command is sent by email to the user who executed it.
 
 
+#
+
+## anacron
+The `anacron` command can be used to execute scheduled tasks that were not performed at their scheduled time due to the system being turned off.
+
+The `anacron` command also executes the commands inside the `/etc/anacrontab` file. After the `anacron` program is installed and the corresponding service starts, the system checks every time it turns on, and if there are any tasks that should have been executed at a specific time but were not, `anacron` will detect and execute them.
+
+The format of the `/etc/anacrontab` file is similar to the `/etc/crontab` file, with the following differences:
+
+- The first three fields represent the period (in days) between executions, the delay (in minutes) before the first execution, and a unique job identifier, respectively.
+- The fourth field represents the command or program to be executed.
+- There is no field for specifying the minute, hour, day, month, or day of the week.
+
+For example:
+```
+7 10 cron.daily run-parts --report /etc/cron.daily
+```
+This line means that the commands in the `/etc/cron.daily` directory should be executed every 7 days, with a 10-minute delay after the system starts up.
+
+The advantage of using `anacron` over `cron` is that `anacron` ensures that scheduled tasks are executed, even if the system was turned off at the scheduled time. `anacron` will execute the missed tasks the next time the system is turned on.
+
+However, `anacron` is not suitable for tasks that need to be executed at a specific time, as it only ensures that the tasks are executed, not at a specific time. For such tasks, `cron` is more appropriate.
+
+
+#
+
+## zip
+The `zip` command has the capability to create archive versions as well.
+
+Syntax:
+```
+zip [options] destination_file source_file(s)
+```
+
+Options:
+- `-r`: Compresses the contents of the directory recursively.
+- `-e`: For encryption.
+- `-d`: Deletes the input file in the compressed file.
+- `-T`: To test the integrity of the archive file.
+
+Examples:
+
+1. Creating a zip archive:
+   ```
+   zip backup.zip file1.txt file2.txt
+   ```
+   This will create a zip file named `backup.zip` that contains `file1.txt` and `file2.txt`.
+
+2. Compressing a directory recursively:
+   ```
+   zip -r documents.zip /path/to/documents
+   ```
+   This will create a zip file named `documents.zip` that contains all the files and subdirectories in the `/path/to/documents` directory.
+
+3. Encrypting a zip file:
+   ```
+   zip -e secure_backup.zip important_files/
+   ```
+   This will create an encrypted zip file named `secure_backup.zip` that contains the contents of the `important_files/` directory.
+
+4. Deleting a file from a zip archive:
+   ```
+   zip -d backup.zip file_to_delete.txt
+   ```
+   This will remove the `file_to_delete.txt` file from the `backup.zip` archive.
+
+5. Testing the integrity of a zip archive:
+   ```
+   zip -T backup.zip
+   ```
+   This will test the integrity of the `backup.zip` archive.
+
+The `zip` command is a powerful tool for compressing and archiving files and directories. It provides various options to customize the compression process, such as encryption, recursive compression, and file deletion within the archive.
+
+#
+
+## gzip
+This program can be used to compress one or more files. If you compress multiple files with this command, it will compress each file individually.
+
+Syntax:
+```
+gzip [options] file(s)
+```
+
+To extract a compressed file, we use the `gunzip` command:
+```
+gunzip file.gz
+```
+
+You can also use the `-d` option with the `gzip` command to extract a compressed file:
+```
+gzip -d file.gz
+```
+
+If you first combined multiple files into an archive using the `tar` command and then compressed the archive using `gzip`, to extract the contents, you need to first extract the `gzip` compression using `gunzip` or `gzip -d`, and then extract the `tar` archive using the `tar` command with the `xvf` options.
+
+The file extension for a file that has first been archived and then compressed is `.tar.gz`.
+
+Some additional options for the `gzip` command:
+
+- `-r`: Compress directories recursively.
+- `-k`: Keep the original file(s) after compression.
+- `-l`: List information about the compressed file(s).
+- `-v`: Verbose mode, shows the compression ratio.
+
+The `gzip` command is useful for compressing individual files, while the `zip` command is more suitable for creating archives that contain multiple files and directories.
+
+#
+
+## bzip2
+The `bzip2` command is similar to the `gzip` command. To extract the contents of a `bzip2` compressed file, we can use the `bunzip2` command or the `-d` option with the `bzip2` command.
+
+Syntax:
+```
+bzip2 [options] file(s)
+bunzip2 file.bz2
+bzip2 -d file.bz2
+```
+
+The file extension for a `bzip2` compressed file is `.bz2`.
+
+The compression level can be specified using numbers from 0 to 9, with higher numbers indicating stronger compression. You can use this as an option in the compression commands:
+
+```
+gzip -8 file.txt
+```
+
+This will create a highly compressed `file.txt.gz` file.
+
+• The split command:
+With this command, you can divide a file into multiple smaller files.
+
+Syntax:
+```
+split [options] input_file output_file_prefix
+```
+
+Options:
+- `-b size`: Specifies the size of the output files in bytes.
+
+To reassemble the split files and recreate the original file, you can use the `cat` command:
+
+```
+cat file1 file2 file3 > original_file
+```
+
+The `bzip2` command provides better compression compared to `gzip`, especially for larger files, but it is also more CPU-intensive. The choice between `gzip` and `bzip2` depends on the specific requirements of your use case, such as the file size, required compression ratio, and available system resources.
+
+
+##
+
+# apt 
+To use the `apt` tool, you need to use its subcommands, such as `apt`, `apt-show`, and `apt-list`. Executing `apt` commands requires the root user or using `sudo` because these commands make changes to the system's core files, such as installing, removing, and updating packages.
+
+1. Updating the package lists:
+   ```
+   sudo apt update
+   ```
+   This command updates the list of available packages from the configured repositories. It's essential to run this before installing or upgrading packages.
+
+2. Upgrading all installed packages:
+   ```
+   sudo apt upgrade
+   ```
+   This command upgrades all installed packages to their latest versions.
+
+3. Full system upgrade:
+   ```
+   sudo apt full-upgrade
+   ```
+   This command performs a full system upgrade, including installing new dependencies and removing incompatible packages.
+
+4. Upgrading to a new Ubuntu version:
+   ```
+   sudo do-release-upgrade -d
+   ```
+   This command upgrades the Ubuntu distribution to the latest version. Note that this is not recommended if you have a weak or unreliable internet connection, as the download process can be interrupted.
+
+5. Installing a package:
+   ```
+   sudo apt install package_name
+   ```
+   This command installs the latest version of the specified package.
+   You can also install a specific version of a package:
+   ```
+   sudo apt install package_name=version
+   ```
+
+6. Installing multiple packages:
+   ```
+   sudo apt install package1 package2 package3
+   ```
+   This command installs the specified packages.
+
+The downloaded packages are stored in the `/var/cache/apt/archives` directory.
+
+Some additional `apt` commands:
+- `apt search package_name`: Searches for packages by name or description.
+- `apt show package_name`: Displays information about a specific package.
+- `apt list --installed`: Lists all installed packages.
+- `apt remove package_name`: Removes a package.
+- `apt autoremove`: Removes packages that were installed as dependencies and are no longer needed.
+
+The `apt` command provides a convenient way to manage packages on Ubuntu and Debian-based Linux distributions. It simplifies the process of updating, upgrading, and installing software packages.
